<resources>
    <string name="app_name">Inventory Management System</string>

    <!-- Common -->
    <string name="product_name">Product</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_rate">Rate</string>
    <string name="select_manufacturer">Please select a manufacturer</string>
    <string name="select_customer">Please select a customer</string>
    <string name="submit_button">Submit</string>

    <!-- Login Fragment -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>

    <!-- Dashboard Fragment -->
    <string name="entry_purchase_button">New Purchase</string>
    <string name="entry_sale_button">New Sale</string>
    <string name="view_purchases_button">View Purchases</string>
    <string name="view_sales_button">View Sales</string>
    <string name="options_button">Options</string>

    <string name="no_products">No product found</string>

    <!-- Create Records Fragment -->
    <string name="invoice_no">Invoice No:</string>
    <string name="name">Name:</string>
    <string name="gst_no">GST No:</string>
    <string name="date">Date:</string>
    <string name="edit_button">Edit</string>
    <string name="no_manufacturer">Please select a manufacturer</string>
    <string name="no_customer">Please select a customer</string>

    <!-- View Records Fragment -->
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="total">Total:</string>
    <string name="select_date">Please select a date</string>

    <!-- Options Fragment -->
    <string name="dev_note">Developed by UziTech</string>
    <string name="manage_products_button">Manage products</string>
    <string name="manage_users_button">Manage users</string>
    <string name="sign_out_button">Sign-out</string>

    <!-- Toast messages -->
    <string name="update_available">A newer version is available</string>
    <string name="reinstall_app">Please reinstall the app</string>
    <string name="contact_admin">Please contact the admin</string>
    <string name="empty_input">Please enter valid credentials</string>
    <string name="incorrect_login">Please check your credentials</string>
    <string name="check_individual_name">Please check the name</string>
    <string name="record_added">Successfully added</string>
</resources>